testdata/terraform/sample.tf
terraform {
  required_version = ">= 1.0"
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
  }
}

provider "aws" {
  region = "us-west-2"
}

variable "instance_type" {
  description = "EC2 instance type"
  type        = string
  default     = "t3.micro"
}

variable "key_name" {
  description = "EC2 Key Pair name"
  type        = string
}

locals {
  common_tags = {
    Environment = "dev"
    Project     = "terraform-file-organize"
  }
}

data "aws_ami" "ubuntu_simple" {
  most_recent = true
  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }
  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
  owners = ["099720109477"]
}

resource "aws_security_group" "simple" {
  name_prefix = "simple-"
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  tags = local.common_tags
}

resource "aws_instance" "simple" {
  ami           = data.aws_ami.ubuntu_simple.id
  instance_type = var.instance_type
  key_name      = var.key_name
  
  vpc_security_group_ids = [aws_security_group.simple.id]
  
  tags = merge(local.common_tags, {
    Name = "simple-server"
  })
}

module "simple_vpc" {
  source = "terraform-aws-modules/vpc/aws"
  
  name = "simple-vpc"
  cidr = "10.1.0.0/16"
  
  azs             = ["us-west-2a", "us-west-2b"]
  private_subnets = ["10.1.1.0/24", "10.1.2.0/24"]
  public_subnets  = ["10.1.101.0/24", "10.1.102.0/24"]
  
  enable_nat_gateway = false
  enable_vpn_gateway = false
  
  tags = local.common_tags
}

output "simple_instance_id" {
  description = "ID of the simple EC2 instance"
  value       = aws_instance.simple.id
}

output "simple_instance_public_ip" {
  description = "Public IP address of the simple EC2 instance"
  value       = aws_instance.simple.public_ip
}
